# qlementine

./: .clang-format  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  CONTEXT.md  README.md  vcpkg.json
cmake/: config.cmake.in
docs/: qt5-port-regression-ledger.md  qt5-port-regression-ledger.zh-CN.md
docs/adr/: 0001-hard-fork-as-new-library-basis.md  0002-qt5-only-port.md
lib/: CMakeLists.txt
lib/include/: qlementine.hpp
lib/include/qlementine/: Common.hpp
lib/src/animation/: WidgetAnimationManager.cpp  WidgetAnimator.cpp
lib/src/resources/: ResourceInitialization.cpp
lib/src/style/: Delegates.cpp  QlementineStyle.cpp  Theme.cpp  ThemeManager.cpp
lib/src/tools/: ThemeEditor.cpp
lib/src/utils/: BadgeUtils.cpp  ColorUtils.cpp  FontUtils.cpp  GeometryUtils.cpp  IconUtils.cpp  ImageUtils.cpp  LayoutUtils.cpp  MenuUtils.cpp  PrimitiveUtils.cpp  RadiusesF.cpp  StateUtils.cpp  StyleUtils.cpp  WidgetUtils.cpp  WindowsTitleBarUtils.cpp  WindowsTitleBarUtils.hpp
lib/src/widgets/: AboutDialog.cpp  AbstractItemListWidget.cpp  Action.cpp  ActionButton.cpp  ColorButton.cpp  ColorEditor.cpp  CommandLinkButton.cpp  Expander.cpp  IconWidget.cpp  Label.cpp  LineEdit.cpp  LoadingSpinner.cpp  Menu.cpp  NavigationBar.cpp  NotificationBadge.cpp  PlainTextEdit.cpp  Popover.cpp  PopoverButton.cpp  RoundedFocusFrame.cpp  SegmentedControl.cpp  Switch.cpp  (+1 more)
sandbox/: CMakeLists.txt
sandbox/src/: SandboxWindow.cpp  SandboxWindow.hpp  main.cpp
showcase/: CMakeLists.txt
showcase/src/: ShowcaseWindow.cpp  ShowcaseWindow.hpp  main.cpp
(+69 files in other folders)
